{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 85,
  "lineage": "afd89107-a498-85fd-2cfa-0da2cb57ebc1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446281818594:internet-gateway/igw-01d6b64a9b2e2c145",
            "id": "igw-01d6b64a9b2e2c145",
            "owner_id": "446281818594",
            "tags": {
              "Name": "sourcefuse_igw"
            },
            "tags_all": {
              "Name": "sourcefuse_igw"
            },
            "vpc_id": "vpc-0cb42f338b6f92baa"
          },
          "dependencies": [
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:446281818594:loadbalancer/app/sourcefuse-alb/9ab1638885a1cc91",
            "arn_suffix": "app/sourcefuse-alb/9ab1638885a1cc91",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sourcefuse-alb-900045815.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:446281818594:loadbalancer/app/sourcefuse-alb/9ab1638885a1cc91",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sourcefuse-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0454c415d3b5d1a8f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05dc25d203c28b60a"
              },
              {
                "subnet_id": "subnet-0c55dc4b9925c9dc0"
              }
            ],
            "subnets": [
              "subnet-05dc25d203c28b60a",
              "subnet-0c55dc4b9925c9dc0"
            ],
            "tags": {
              "Name": "sourcefuse-alb"
            },
            "tags_all": {
              "Name": "sourcefuse-alb"
            },
            "vpc_id": "vpc-0cb42f338b6f92baa",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sourcefuse_sg",
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:446281818594:listener/app/sourcefuse-alb/9ab1638885a1cc91/ac9ec4d56a358874",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:446281818594:targetgroup/nginx-tg/ef748a691270aef3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:446281818594:listener/app/sourcefuse-alb/9ab1638885a1cc91/ac9ec4d56a358874",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:446281818594:loadbalancer/app/sourcefuse-alb/9ab1638885a1cc91",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.sourcefuse_sg",
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:446281818594:targetgroup/nginx-tg/ef748a691270aef3",
            "arn_suffix": "targetgroup/nginx-tg/ef748a691270aef3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:446281818594:targetgroup/nginx-tg/ef748a691270aef3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cb42f338b6f92baa"
          },
          "dependencies": [
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446281818594:route-table/rtb-00f075027db17cc04",
            "id": "rtb-00f075027db17cc04",
            "owner_id": "446281818594",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d6b64a9b2e2c145",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sourcefuse_public_route_table"
            },
            "tags_all": {
              "Name": "sourcefuse_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb42f338b6f92baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ff3bc63d3d23b88",
            "route_table_id": "rtb-00f075027db17cc04",
            "subnet_id": "subnet-05dc25d203c28b60a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.sourcefuse_public_subnet_1",
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3c9b10363e40175",
            "route_table_id": "rtb-00f075027db17cc04",
            "subnet_id": "subnet-0c55dc4b9925c9dc0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.sourcefuse_public_subnet_2",
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sourcefuse_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446281818594:security-group/sg-0454c415d3b5d1a8f",
            "description": "Allow inbound traffic on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0454c415d3b5d1a8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "65.190.92.149/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sourcefuse_sg",
            "name_prefix": "",
            "owner_id": "446281818594",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb42f338b6f92baa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sourcefuse_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446281818594:subnet/subnet-06daa3592c2689c38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06daa3592c2689c38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446281818594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sourcefuse_private_subnet"
            },
            "tags_all": {
              "Name": "sourcefuse_private_subnet"
            },
            "vpc_id": "vpc-0cb42f338b6f92baa"
          },
          "dependencies": [
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sourcefuse_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446281818594:subnet/subnet-046e8aeec0a02f7b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046e8aeec0a02f7b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446281818594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sourcefuse_private_subnet2"
            },
            "tags_all": {
              "Name": "sourcefuse_private_subnet2"
            },
            "vpc_id": "vpc-0cb42f338b6f92baa"
          },
          "dependencies": [
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sourcefuse_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446281818594:subnet/subnet-05dc25d203c28b60a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dc25d203c28b60a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446281818594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sourcefuse_public_subnet_1"
            },
            "tags_all": {
              "Name": "sourcefuse_public_subnet_1"
            },
            "vpc_id": "vpc-0cb42f338b6f92baa"
          },
          "dependencies": [
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sourcefuse_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446281818594:subnet/subnet-0c55dc4b9925c9dc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c55dc4b9925c9dc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446281818594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sourcefuse_public_subnet_2"
            },
            "tags_all": {
              "Name": "sourcefuse_public_subnet_2"
            },
            "vpc_id": "vpc-0cb42f338b6f92baa"
          },
          "dependencies": [
            "aws_vpc.sourcefuse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sourcefuse_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446281818594:vpc/vpc-0cb42f338b6f92baa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcde83c790304e3d",
            "default_route_table_id": "rtb-0cbec4b34fc50d003",
            "default_security_group_id": "sg-0da93b3d54ab87dee",
            "dhcp_options_id": "dopt-0c7938a80676e8ef5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb42f338b6f92baa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cbec4b34fc50d003",
            "owner_id": "446281818594",
            "tags": {
              "Name": "sourcefuse_vpc"
            },
            "tags_all": {
              "Name": "sourcefuse_vpc"
            }
          }
        }
      ]
    }
  ]
}